--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 黄娣红
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: huangdihong
 # 头像里面的描述
 avatarDesc: 黄娣红个人博客
 url: "http://baixin.io"
